fixed overflow

--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@
   padding: 0;
   font-family: "Josefin Sans", sans-serif;
 }
-.main {
+html,
+body {
   background: linear-gradient(
     135deg,
     hsl(0, 0%, 100%) 0%,
     hsl(0, 100%, 98%) 100%
   );
   height: 100vh;
-  width: 100vw;
+  min-width: 100%;
+  overflow-x: hidden;
 }
 .logo {
   margin: 1.5em;
@@ -233,5 +235,15 @@ form.error input {
 @media only screen and (max-width: 330px) {
   form input {
     width: 77%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  html,
+  body {
+    background: linear-gradient(
+      135deg,
+      hsl(0, 0%, 100%) 0%,
+      hsl(0, 100%, 98%) 100%
+    );
   }
 }
